	Fixed bug where onchange event wasn't fired correctly on IE when color picker was used in dialogs.
	Fixed bug where save plugin could not save contents if the converted element wasn't an textarea.
	Fixed bug where events might be fired even after an editor instance was removed such as blur events.
	Fixed bug where an exception about undefined undo levels could be throwed sometimes.
	Fixed so editor contents gets stored before it the onSubmit event is fired.
Version 3.0rc1 (2008-01-08)
	Added new classes for toolbar rows in advanced theme mceToolbarRow1..n enabled you to change appearance of individual rows.
	Added auto detection for the strict_loading_mode option when running in application/xhtml+xml mode on Gecko.
	Optimized the HTML serializer by bundling some post process methods together.
	Fixed so that the toolbars have unique IDs, enables you to alter the toolbars using the ControlManager and the DOM.
	Fixed bug where delta values for dialog sizes in language packs didn't work correctly due to missing string to number casting.
	Fixed bug where paragraph generation logic didn't handle hr or table elements correctly if they where the only element.
	Fixed bug where some elements got extra linebreaks added after or before it in HTML output.
	Fixed bug where it was hard to modify existing style data on table rows and table cells.
	Fixed bug where the dom.getRect method didn't handle non pixel values correctly.
	Fixed bug where strikethrough and underline couldn't be toggled on existing span elements.
	Fixed bug where the postprocessor searched for nsbp instead of nbsp entities.
	Fixed bug where it was impossible to edit links that had child elements within them.
	Fixed bug where it was possible to click on the parent item of a submenu.
	Fixed bug where mouseover/mouseout images couldn't be removed in advimage dialog.
	Fixed bug where drop menus didn't work when running in application/xhtml+xml mode.