@@ -13,6 +13,8 @@ Version 3.0rc2 (2008-01-xx)
 	Fixed bug where save plugin could not save contents if the converted element wasn't an textarea.
 	Fixed bug where events might be fired even after an editor instance was removed such as blur events.
 	Fixed bug where an exception about undefined undo levels could be throwed sometimes.
+	Fixed bug where the plugin_preview_pageurl option didn't work.
+	Fixed so the preview example.html file is updated to the new 3.x API.
 	Fixed so editor contents gets stored before it the onSubmit event is fired.
 Version 3.0rc1 (2008-01-08)
 	Added new classes for toolbar rows in advanced theme mceToolbarRow1..n enabled you to change appearance of individual rows.
